# widgetlords-pi-spi-8ai

./: .gitignore  README.md  run.sh
adc-monitor/: CMakeLists.txt  README.md  example.c  main.c  post_build.sh  run.sh
adc-monitor/inc/: config.h
adc-monitor/inc/drivers/: adc_mcp3008.h  gpio.h
adc-monitor/inc/tasks/: api.h  mainloop.h
adc-monitor/inc/utils/: libjson.h  log.h  sched_attr.h  stdfun.h
adc-monitor/src/drivers/: adc_mcp3008.c  gpio.c
adc-monitor/src/tasks/: api.c  mainloop.c
adc-monitor/src/utils/: build_number.c  libjson.c  log.c  stdfun.c
web-services/: run.sh  web-server.sh  websocket-gateway.sh
web-services/web-server/: package.json
web-services/web-server/public/: index.html
web-services/web-server/public/scripts/: context.js  functions.js  websocket-client.js
web-services/web-server/public/styles/: main.css
web-services/web-server/src/: index.js
web-services/websocket-gateway/: package.json
web-services/websocket-gateway/src/: index.js  socket-client.js
